--- a/extract_excel.ipynb
+++ b/extract_excel.ipynb
@@ -287,11 +287,11 @@
     "        combined_data.dropna(subset=['value_calk'], inplace=True)\n",
     "\n",
     "        # Pengaturan koneksi MySQL\n",
-    "        mysql_user = 'root' \n",
-    "        mysql_password = 'Dika007!#'   \n",
-    "        mysql_host = 'localhost'  \n",
-    "        mysql_port = '3306' \n",
-    "        db_name = 'db_calk'  \n",
+    "        mysql_user = '-' \n",
+    "        mysql_password = '-'   \n",
+    "        mysql_host = '-'  \n",
+    "        mysql_port = '-' \n",
+    "        db_name = '-'  \n",
     "\n",
     "        # Membuat koneksi ke MySQL menggunakan SQLAlchemy\n",
     "        engine = create_engine(f'mysql+pymysql://{mysql_user}:{mysql_password}@{mysql_host}:{mysql_port}/{db_name}')\n",
