--- a/extract_pdf.ipynb
+++ b/extract_pdf.ipynb
@@ -3130,11 +3130,11 @@
     "\n",
     "# Fungsi export dataframe ke database MySQL\n",
     "def export_to_mysql(merged_df, table_name='tb_pdf', \n",
-    "                    mysql_user='root', \n",
-    "                    mysql_password='Dika007!#', \n",
-    "                    mysql_host='localhost', \n",
-    "                    mysql_port='3306', \n",
-    "                    db_name='db_calk'):\n",
+    "                    mysql_user='-', \n",
+    "                    mysql_password='-', \n",
+    "                    mysql_host='-', \n",
+    "                    mysql_port='-', \n",
+    "                    db_name='-'):\n",
     "    try:\n",
     "        # Mapping nama kolom sesuai dengan database\n",
     "        column_mapping = {\n",
