--- a/detail.ipynb
+++ b/detail.ipynb
@@ -171,10 +171,10 @@
     "            print(\"MySQL connection is closed.\")\n",
     "\n",
     "# Konfigurasi database\n",
-    "db_host = 'localhost'  # Ganti dengan host database Anda\n",
-    "db_name = 'db_calk'  # Ganti dengan nama database Anda\n",
-    "db_user = 'root'  # Ganti dengan username Anda\n",
-    "db_password = 'Dika007!#'  # Ganti dengan password Anda\n",
+    "db_host = '-'  # Ganti dengan host database Anda\n",
+    "db_name = '-'  # Ganti dengan nama database Anda\n",
+    "db_user = '-'  # Ganti dengan username Anda\n",
+    "db_password = '-'  # Ganti dengan password Anda\n",
     "\n",
     "# Panggil fungsi untuk menyisipkan data ke database\n",
     "insert_into_database(df, db_host, db_name, db_user, db_password)"
